--- a/TrainAssign.html
+++ b/TrainAssign.html
@@ -142,7 +142,7 @@
   </table>
 
   <script>
-    const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbwAuBBWw3EmgkMvY1lPTv70XIV07UWIKqV-y8VX80vZEk5P1LoQi0M6wvJzJRDW_yPp/exec";
+    const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbwf-CnItLOCeiucXiq6IF2ohA3wGEZjEuj1WL6mSwSORunJNdydtCK17reJw81wJISQwg/exec";
     const API_TOKEN    = "absdo24365";
 
     let memberList = [];
@@ -206,37 +206,32 @@
     }
 
     async function confirmAssign() {
-      if (!lastPreview) { setBusy(false, "先にプレビューしてください"); return; }
-      setBusy(true, "確定中...");
+  if (!lastPreview) { setBusy(false, "先にプレビューしてください"); return; }
+  setBusy(true, "確定中...");
 
-      try {
-        const url  = `${GAS_ENDPOINT}?token=${API_TOKEN}`;
-        const body = JSON.stringify({
-          action: "confirmWeekAssignments",
-          week: lastPreview.week,
-          ranksToReset: lastPreview.ranksToReset
-        });
+  try {
+    const resp = await fetch(GAS_ENDPOINT, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },   // ← 修正
+      body: JSON.stringify({
+        action: "confirmWeekAssignments",
+        token: API_TOKEN,
+        week: lastPreview.week
+      })
+    });
 
-        const resp = await fetch(url, {
-          method: "POST",
-          headers: { "Content-Type": "text/plain;charset=utf-8" },
-          body
-        });
+    const data = await resp.json();   // ← JSON 前提
+    if (!data.ok) throw new Error(data.error || "unknown error");
 
-        const data = await resp.json();
-        if (!data.ok) throw new Error(data.error || "unknown error");
-
-        setBusy(false, "確定しました！（スプレッドに反映済み）");
-
-        document.getElementById("btnPreview").disabled = true;
-        document.getElementById("btnConfirm").disabled = true;
-        document.getElementById("status").textContent = "確定済み。再抽選はできません。";
-      } catch (err) {
-        console.error(err);
-        setBusy(false, "エラー: " + err.message);
-      }
-    }
-
+    setBusy(false, "確定しました！（スプレッドに反映済み）");
+    document.getElementById("btnPreview").disabled = true;
+    document.getElementById("btnConfirm").disabled = true;
+    document.getElementById("status").textContent = "確定済み。再抽選はできません。";
+  } catch (err) {
+    console.error(err);
+    setBusy(false, "エラー: " + err.message);
+  }
+}
     function renderResult(week) {
       const tbody = document.getElementById("tbody-result");
       tbody.innerHTML = "";
